--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ main {
 }
 
 .box {
+    margin: 10px;
     width: 70%;
 }
 
@@ -21,6 +22,6 @@ main {
 }
 
 .senape {
-    height: 400px;
-    background-color: #E579E6;
+    height: 300px;
+    background-color: #E1D67A;
 }
