--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,8 @@ main {
 }
 
 .box {
-    margin: 10px;
+
+    margin: 10px auto;
     width: 70%;
 }
 
@@ -24,4 +25,9 @@ main {
 .senape {
     height: 300px;
     background-color: #E1D67A;
+}
+
+.blue {
+    height: 600px;
+    background-color: blue;
 }
