--- a/css/style.css
+++ b/css/style.css
@@ -18,16 +18,44 @@ main {
 
 /* specifici box  */
 .violet {
-    height: 100px;
+    height: 50px;
     background-color: #E579E6;
 }
 
 .senape {
-    height: 300px;
+    height: 200px;
     background-color: #E1D67A;
 }
 
 .blue {
-    height: 600px;
-    background-color: blue;
+    height: 400px;
+    background: #0087F8;
+}
+
+.lightblue {
+    width: 100%;
+    height: 50px;
+    background-color: #ABCFE7;
+}
+
+.aside {
+    margin-bottom: 10px;
+    width: 20%;
+    height: 340px;
+    background-color: #ABCFE7;
+}
+
+/* id che in caso di altri aside possono essere cambiati in CLASSI  */
+.right {
+    float: right;
+}
+
+.left {
+    float: left;
+}
+
+.center {
+    background-color: red;
+    height: 150px;
+    width: 150px;
 }
