--- a/css/style.css
+++ b/css/style.css
@@ -9,12 +9,11 @@ main {
     width: 80%;
     margin: 10px auto;
 }
-
 .box {
-
     margin: 10px auto;
     width: 70%;
 }
+
 
 /* specifici box  */
 .violet {
@@ -27,10 +26,6 @@ main {
     background-color: #E1D67A;
 }
 
-.blue {
-    height: 400px;
-    background: #0087F8;
-}
 
 .lightblue {
     width: 100%;
@@ -39,23 +34,34 @@ main {
 }
 
 .aside {
-    margin-bottom: 10px;
     width: 20%;
     height: 340px;
     background-color: #ABCFE7;
 }
 
-/* id che in caso di altri aside possono essere cambiati in CLASSI  */
+/* BOX BLUE  */
+section {
+    background: blue;
+}
+section::after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
 .right {
+    margin-left: 10px;
     float: right;
 }
 
 .left {
+    margin-right: 10px;
     float: left;
 }
 
 .center {
+    float: left;
     background-color: red;
-    height: 150px;
-    width: 150px;
+    height: 340px;
+    width: 50%;
 }
