add commento css

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ main {
     background-color: #E579E6;
 }
 
+/* specifico per box >> footer  */
 .violet {
     height: 35px;
     background-color: #8801FE;
